Added created_date field in entities to fix findAll tests. Added entities short comparators Added screen diff table